[package]
name = "linkd"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A simple actor model framework that takes inspiration from OTP in the erlang ecosystem."
repository = "https://github.com/DiaanEngelbrecht/linkd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
